Wed Apr 18 23:53:40 CDT 2001 Adam Heath <doogie@debian.org>

  * lib/database.c: In blankpackage, intialize ->installed and ->available.
    Found by me and Fumitoshi UKAI <ukai@debian.or.jp>.  This should help
    several segfaults that people have been seeing in dpkg.

Wed Apr 18 23:42:16 CDT 2001 Adam Heath <doogie@debian.org>

  * lib/mlib.c: If the buffer size is 0 in buffer_copy, then return, and
    do nothing.

Wed Apr 18 23:42:16 CDT 2001 Adam Heath <doogie@debian.org>

  * configure.in, debian/control: New upstream gettext.  Since we had
    to change our build, to comply with the new upstream, we also
    need to modify the build-depends.
  * po/dpkg.pot, po/nl.po: Fixed broken translations.

Wed Apr 18 18:01:21 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/install-info.{8,pl}: modify install-info to take relative
    filesnames, and add a --remove-exactly option to only remove exact
    matches (Rob Browning)

Sun Apr 15 22:42:11 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * config.sub, config.guess: updated
  * archtable: add hppa64-linux-gnu
  * po/ja.po: remove some translations that gettext can't handle on hppa

Thu Apr 12 13:12:16 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/it.po: installed new version from Lele Gaifax
  * dselect/main.cc: translate menu option as well in dme()

Wed Apr 11 12:19:25 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * dselect.main.cc: retry getch if it fails with EINTR

Sun Mar 11 19:24:58 CET 2001 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation.

Sat Mar 10 15:59:39 CST 2001 Adam Heath <doogie@debian.org>

  * main/filesdb.c: Use a pure file descriptor, instead of a stream, to
    load the data, in ensure_packagefiles_available.

Sat Mar 10 01:33:15 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * main/main,h, main/main.c: add --no-debsig option using f_nodebsign
  * main/processarc: don't check signatures of f_nodebsign is set
