@@ -58,6 +58,8 @@ dpkg (1.9.0) unstable; urgency=low
   * Handle window resize in dselect main menu. Closes: Bug#93559
   * Initialize all parts of the package record.  This should fix several
     segfaults people have been seeing in dpkg.  Closes: #90328.
+  * Apply patch from bug#86847, that escapes intl chars in filenames.
+    Closes(rc): #83752, #85040, #86847, #89000.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
