@@ -1,3 +1,8 @@
+Thu Apr 19 00:03:16 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * main/archives.c:  Apply patch from Fumitoshi UKAI <ukai@debian.or.jp>,
+    that escapes invalid characters in filenames(intl).
+
 Wed Apr 18 23:53:40 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/database.c: In blankpackage, intialize ->installed and ->available.
